--- a/src/components/HeroHeading/HeroHeading.css
+++ b/src/components/HeroHeading/HeroHeading.css
@@ -37,7 +37,8 @@
         height: 100%;
         justify-content: center;
         background-image: url('/slider-1.webp');
-        background-image:  radial-gradient(circle, rgba(255,255,255,0) 39%, rgba(0,0,0,1) 100%), url('/slider-1.webp')
+        background-image:  radial-gradient(circle, rgba(255,255,255,0) 39%, rgba(0,0,0,1) 100%), url('/slider-1.webp');
+        background-size: 400% 100%;
     }
 
     .company-name {
