--- a/src/components/ProjectChoice/ProjectChoice.css
+++ b/src/components/ProjectChoice/ProjectChoice.css
@@ -92,7 +92,7 @@
         width: 100%;
     }
     .fw-card-title {
-        font-size: 4rem;
+        font-size: 3.5rem;
     }
     .fw-card img {
         filter: grayscale(0.3)
