--- a/src/components/SwirlingSection/SwirlingSection.css
+++ b/src/components/SwirlingSection/SwirlingSection.css
@@ -146,7 +146,7 @@
 @media screen and (max-width: 768px) {
     .swirling-section {
         /* outline: 1px solid red; */
-        min-height: 200vh !important;
+        min-height: 200vh;
     }
     .swirling-intro-text {
         margin-top: 50vh;
@@ -165,5 +165,16 @@
         margin-bottom: 0;
         font-size: 3.8rem;
         /* margin-top: 10%; */
+    }
+    .swrirling-images-title {
+        font-size: 4.5rem;
+    }
+    .portfolio-selector {
+        font-size: 2rem;
+    }
+    .precision-image, .excellence-image {
+        opacity: 0.5;
+        /* width: 1rem; */
+        filter: none
     }
 }
