--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,9 @@ body {
 .overflow-hidden {
   overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    max-width: 100vw;
+  }
+}
